@@ -1,3 +1,8 @@
+2005-12-16  Christian Neumair  <chris@gnome-de.org>
+
+	* freedesktop.org.xml.in: Add ChangeLog MIME type "text/x-changelog".
+	Fixes #5355. Thanks to Björn Lindqvist and Paolo Borelli.
+
 2005-12-02  Christian Neumair  <chris@gnome-de.org>
 
 	* freedesktop.org.xml.in: Modify Ogg-related MIME types to match the
